--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -124,7 +124,7 @@ top: 201px;
 margin: auto;
 }
 
-.fill-btn, .reset-btn,.dl-btn{
+.fill-btn, .reset-btn,.dl-btn, .schedule-btn{
 left: 1006px;
 top: 586px;
 width: 128px;
@@ -177,3 +177,36 @@ text-align: center;
 	text-align: left;
 	letter-spacing: 1pt;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+	position: relative;
+	display: inline-block;
+	}
+	
+/* Dropdown Content (Hidden by Default) */
+.schedule-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	}
+	
+/* Links inside the dropdown */
+.schedule-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	}
+	  
+/* Change color of dropdown links on hover */
+.schedule-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .schedule-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .schedule-btn {background-color: #3e8e41;}
